tests/unit-fail-compilation/j023d.c.ref
j023d.c:2:7: error: Casting void type to non-void type.
  Undefined behavior (UB-CCV6).
   see C11 section 6.3.2.2:1 http://rvdoc.org/C11/6.3.2.2
   see C11 section J.2:1 item 23 http://rvdoc.org/C11/J.2
   see CERT-C section MSC15-C http://rvdoc.org/CERT-C/MSC15-C
Translation failed (config dumped). Run kcc -d j023d.c to see commands run.
